Revise page overflow issue fixed.

--- a/html/assets/styles/revise.scss
+++ b/html/assets/styles/revise.scss
@@ -1,5 +1,9 @@
 @import '_settings';
 
+html, body {
+	overflow: hidden;
+}
+
 #page main {
 	border-width: 10px;
     margin-bottom: 0;
